--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<?php include ("config_mb/configure_mb.php");?>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Circle Table Tech.</title>
+    <title><?php echo $site_title ?></title>
 
     <!-- CSS-->
     <link href="css/bootstrap.min.css" rel="stylesheet">
