perubahan sedikit untuk memper'indah'..
ceritanya sih gitu

--- a/signup.html
+++ b/signup.html
@@ -9,8 +9,8 @@
 
 <body>
 
-<div class="container">
-    <div class="row">
+<div class="container-customss">
+    <div class="row-custom">
         <div class="col-xs-12 col-sm-12 col-md-4 well well-sm">
             <legend><a href="index.html"><i class="glyphicon glyphicon-globe"></i></a> Sign up!</legend>
             <form action="#" method="post" class="form" role="form">
@@ -30,9 +30,7 @@
                 Birth Date</label>
             <div class="row">
                 <div class="col-xs-4 col-md-4">
-                     <div class="hero-unit">
-                <input  type="text" id="example1">
-            </div>
+                    <input class="form-control"  type="datetime" id="example1">
                 </div>
                 
             </div>
