--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
 
 <div class="container-customss">
     <div class="row-custom">
-        <div class="col-xs-12 col-sm-12 col-md-4 well well-sm">
+        <div class="col-md-4 well well-sm well-custom">
             <legend><a href="index.html"><i class="glyphicon glyphicon-globe"></i></a> Sign up!</legend>
             <form action="#" method="post" class="form" role="form">
             <div class="row">
