hapus a href di globe

--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
 <div class="container-customss">
     <div class="row-custom">
         <div class="col-md-4 well well-sm well-custom">
-            <legend><a href="index.html"><i class="glyphicon glyphicon-globe"></i></a> Sign up!</legend>
+            <legend><a href="#"><i class="glyphicon glyphicon-globe"></i></a> Sign up!</legend>
             <form action="#" method="post" class="form" role="form">
             <div class="row">
                 <div class="col-xs-6 col-md-6">
