--- a/shopingcart.html
+++ b/shopingcart.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Shoping Cart</title>
-<link rel="stylesheet" href="css/shop.css">
+<link rel="stylesheet" href="css/custom.css">
 <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
