--- a/onlineshop/pages/contact.html
+++ b/onlineshop/pages/contact.html
@@ -8,8 +8,8 @@
     <title>Circle Table Tech.</title>
 
     <!-- CSS-->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="../../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../css/custom.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
@@ -33,7 +33,7 @@
   <div class="container">
 	  <div class="menu container">
 	 		<div class="col-md-2">
-	 			<a href="#"><img src="images/logo.png"></a>
+	 			<a href="#"><img src="../../images/logo.png"></a>
 	 		</div>
 	 		<div class="col-md-10">
 	 			<nav class="navbar navbar-default">
@@ -170,7 +170,7 @@
 
 	 <footer class="container">
 	 	<div class="col-md-3">
-	 		<img src="images/logo.png">
+	 		<img src="../../images/logo.png">
 	 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 	 	</div>
 	 	<div class="col-md-6">
@@ -252,6 +252,6 @@
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../../js/bootstrap.min.js"></script>
   </body>
 </html>
